# JSM_Studio

./: .gitignore  README.md  README_zh.md
.github/workflows/: release.yml
JSM_GUI/jsm-gui-app/: electron-builder.json5  index.html  package-lock.json  package.json  vite.config.ts
JSM_GUI/jsm-gui-app/electron/: electron-env.d.ts  main.ts  preload.ts
JSM_GUI/jsm-gui-app/src/: App.css  App.tsx  index.css  main.tsx
JSM_GUI/jsm-gui-app/src/components/: AccelSensForm.tsx  BindingRow.tsx  ConfigEditor.module.css  ConfigEditor.tsx  ControllerStatusPage.module.css  ControllerStatusPage.tsx  ControllerStatusSvg.tsx  CurvePreview.tsx  Graph.module.css  Gyro.module.css  GyroBehaviorControls.tsx  (+23 more)
JSM_GUI/jsm_gui_tauri/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
JSM_GUI/jsm_gui_tauri/native/console-injector/: CMakeLists.txt  README.md
JSM_GUI/jsm_gui_tauri/native/console-injector/src/: ConsoleInjector.cpp
JSM_GUI/jsm_gui_tauri/scripts/: build-console-injector.ps1  tauri-dev-admin.ps1
JSM_GUI/jsm_gui_tauri/src/: App.css  App.tsx  index.css  main.tsx
JSM_GUI/jsm_gui_tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
JSM_GUI/jsm_gui_tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  runtime.rs
JSM_GUI/jsm_gui_tauri/src-tauri/src/services/: ai.rs  app_state.rs  hidhide.rs  input_debug.rs  jsm_process.rs  mod.rs  telemetry.rs
JoyShockMapper/: CMakeLists.txt
JoyShockMapper/include/: JoyShock.h  JoyShockMapper.h  JslWrapper.h  Telemetry.h
JoyShockMapper/src/: ButtonHelp.cpp  JoyShock.cpp  JslWrapper.cpp  SDLWrapper.cpp  Telemetry.cpp  main.cpp
JoyShockMapper/src/win32/: InputHelpers.cpp
docs/: tauri-refactor-plan.md
(+128 files in other folders)
