[package]
name = "jsm-gui-app-tauri"
version = "2.1.0"
description = "Tauri shell for JoyShockMapper Custom Curve GUI"
authors = ["Evan McLean"]
edition = "2021"

[lib]
name = "jsm_gui_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
open = "5.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = [] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
